[package]
name = "Jurgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3"
kernel32-sys = "0.2"
user32-sys = "0.2"
d3d12-sys = "0.2"
dxgi-sys = "0.2"
dxguid-sys = "0.2"
d3dcompiler-sys = "0.2"
widestring = "1.0"
